# MyTSP

./: .gitignore  .gitmodules  CMakeLists.txt  DataReader.hpp  Point.hpp  README.md  TSP.cpp  TSP.hpp  main.cpp
Data/: att48.tsp  test.tsp
